[metadata]
name = medical-triage-env
version = 1.0.0
description = Emergency Department Triage Environment for OpenEnv Hackathon

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pydantic>=2.0.0
    numpy>=1.24.0
    python-dateutil>=2.8.2
    gradio>=4.0.0
    pandas>=2.0.0
    openai>=1.0.0
    uvicorn>=0.30.0
    fastapi>=0.115.0
    openenv-core>=0.2.0

[options.entry_points]
console_scripts =
    openenv-server = server.app:main

[openenv]
environment_class = src.environment.MedicalTriageEnv